force-app/main/default/objects/Agreement__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Educational institution or partner institution</description>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>