force-app/main/default/objects/Agreement__c/fields/External_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>External_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Educational Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Educational Institution</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (External Educational Institution)</relationshipLabel>
    <relationshipName>External_Edu_Inst_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>