force-app/main/default/objects/Agreement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Unit Recognition</fullName>
                <default>true</default>
                <label>External Unit Recognition</label>
            </value>
            <value>
                <fullName>Internal Unit Recognition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>